PersonalOrg/force-app/main/default/objects/Sales_Data_Analysis__c/Sales_Data_Analysis__c.object-meta.xml
<CustomObject>
    <label>Sales Data Analysis</label>
    <nameField>
        <displayFormat>SD-{0000}</displayFormat>
        <label>Sales Data Analysis Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Data Analysis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>