PersonalOrg/force-app/main/default/objects/Sales_Data_Analysis__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <label>Account Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>