PersonalOrg/force-app/main/default/objects/Sales_Data_Analysis__c/fields/Business_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Business_Close_Date__c</fullName>
    <label>Business Close Date</label>
    <type>Date</type>
</CustomField>