PersonalOrg/force-app/main/default/objects/Sales_Data_Analysis__c/fields/Business_Deal_Duration__c.field-meta.xml
<CustomField>
    <fullName>Business_Deal_Duration__c</fullName>
    <formula>Business_Close_Date__c  -  Business_Create_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Deal Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>