PersonalOrg/force-app/main/default/objects/Sales_Data_Analysis__c/fields/Business_Month__c.field-meta.xml
<CustomField>
    <fullName>Business_Month__c</fullName>
    <formula>MONTH(Business_Close_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>