PersonalOrg/force-app/main/default/objects/Sales_Data_Analysis__c/fields/Business_Stage__c.field-meta.xml
<CustomField>
    <fullName>Business_Stage__c</fullName>
    <label>Business Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OFFER</fullName>
            </value>
            <value>
                <fullName>LOST</fullName>
            </value>
            <value>
                <fullName>WON</fullName>
            </value>
            <value>
                <fullName>LEAD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>