PersonalOrg/force-app/main/default/objects/Sales_Data_Analysis__c/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CROSS-SELLING</fullName>
            </value>
            <value>
                <fullName>NEW BUSINESS</fullName>
            </value>
            <value>
                <fullName>UP-SELLING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>