PersonalOrg/force-app/main/default/objects/Sales_Data_Analysis__c/fields/Business_Year__c.field-meta.xml
<CustomField>
    <fullName>Business_Year__c</fullName>
    <formula>YEAR(Business_Close_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>