PersonalOrg/force-app/main/default/objects/Sales_Data_Analysis__c/fields/New_Product_Quantity__c.field-meta.xml
<CustomField>
    <fullName>New_Product_Quantity__c</fullName>
    <label>New Product Quantity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>