PersonalOrg/force-app/main/default/objects/Sales_Data_Analysis__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <length>40</length>
    <type>Text</type>
</CustomField>