PersonalOrg/force-app/main/default/objects/Sales_Data_Analysis__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consumables</fullName>
            </value>
            <value>
                <fullName>Dispenser</fullName>
            </value>
            <value>
                <fullName>Panel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>