PersonalOrg/force-app/main/default/objects/Sales_Data_Analysis__c/fields/Sales_Country__c.field-meta.xml
<CustomField>
    <fullName>Sales_Country__c</fullName>
    <label>Sales Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AT</fullName>
            </value>
            <value>
                <fullName>BE</fullName>
            </value>
            <value>
                <fullName>CH</fullName>
            </value>
            <value>
                <fullName>CZ</fullName>
            </value>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>HU</fullName>
            </value>
            <value>
                <fullName>NL</fullName>
            </value>
            <value>
                <fullName>PL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>