PersonalOrg/force-app/main/default/objects/Sales_Data_Analysis__c/fields/Sales_Team__c.field-meta.xml
<CustomField>
    <fullName>Sales_Team__c</fullName>
    <label>Sales Team</label>
    <length>40</length>
    <type>Text</type>
</CustomField>