PersonalOrg/force-app/main/default/objects/Sales_Data_Analysis__c/fields/Turnover__c.field-meta.xml
<CustomField>
    <fullName>Turnover__c</fullName>
    <label>Turnover</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>