PersonalOrg/force-app/main/default/objects/Sales_Data_Analysis__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Sales_Country__c</columns>
    <columns>Business_Type__c</columns>
    <columns>Product_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>